<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomePage">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/innerConstraintOne"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_centerInParent="true"
        android:background="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/innerConstraintTwo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:contentDescription="the logo"
            android:paddingStart="29dp"
            android:paddingEnd="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.038"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="178dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/hot_pink"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.79" />

        <Button
            android:id="@+id/btnGuest"
            android:layout_width="178dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/hot_pink"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/continue_as_guest"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintVertical_bias="0.333" />

        <TextView
            android:id="@+id/txtOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/or"
            android:textColor="@color/pink"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/btnGuest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloobhai"
            android:shadowColor="@color/black"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="6"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/txtQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/pink"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.328"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGuest"
            app:layout_constraintVertical_bias="0.567" />

        <TextView
            android:id="@+id/txtSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/sign_up_here"
            android:textColor="@color/pink"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toEndOf="@+id/txtQuestion"
            app:layout_constraintTop_toBottomOf="@+id/btnGuest"
            app:layout_constraintVertical_bias="0.567" />

        <TextView
            android:id="@+id/txtLineOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="1dp"
            android:paddingEnd="3dp"
            android:paddingBottom="10dp"
            android:text="@string/lineOne"
            android:textColor="@color/pink"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnGuest"
            app:layout_constraintEnd_toStartOf="@+id/txtOr"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <TextView
            android:id="@+id/txtLineTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="4dp"
            android:paddingEnd="1dp"
            android:paddingBottom="10dp"
            android:text="@string/lineOne"
            android:textColor="@color/pink"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnGuest"
            app:layout_constraintStart_toEndOf="@+id/txtOr"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>