<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        android:contentDescription="TODO" />


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="149dp"
        android:layout_height="155dp"
        app:layout_constraintBottom_toTopOf="@+id/innerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851"
        app:srcCompat="@drawable/logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/innerLayout"
        android:layout_width="match_parent"
        android:layout_height="590dp"
        android:background="@drawable/sign_up_rectangle"
        android:baselineAligned="false"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtFirstName"
            android:layout_width="101dp"
            android:layout_height="23dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/first_name"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.087"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.065" />

        <TextView
            android:id="@+id/txtLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/last_name"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.084"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.228" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.385" />

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.54" />

        <TextView
            android:id="@+id/txtRePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/re_enter_password"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.691" />

        <Button
            android:id="@+id/btnProceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/proceed"
            android:textColor="@color/light_pink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.913" />

        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edit_text_underline_one"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/type_here"
            android:inputType="text"
            android:paddingTop="6dp"
            android:textColorHint="@color/ghost"
            android:textSize="13sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/txtLastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFirstName"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edit_text_underline_one"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/type_here"
            android:inputType="text"
            android:paddingTop="6dp"
            android:textColorHint="@color/ghost"
            android:textSize="13sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/txtEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLastName"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edit_text_underline_one"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/type_here"
            android:inputType="text"
            android:paddingTop="6dp"
            android:textColorHint="@color/ghost"
            android:textSize="13sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/txtPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.243"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edit_text_underline_one"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/type_here"
            android:inputType="text"
            android:paddingTop="6dp"
            android:textColorHint="@color/ghost"
            android:textSize="13sp"
            android:textStyle="italic"
            android:drawableEnd="@drawable/hide"
            app:layout_constraintBottom_toTopOf="@+id/txtRePassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.243"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/editRePassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edit_text_underline_one"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/type_here"
            android:inputType="text"
            android:paddingTop="6dp"
            android:textColorHint="@color/ghost"
            android:textSize="13sp"
            android:textStyle="italic"
            android:drawableEnd="@drawable/hide"
            app:layout_constraintBottom_toTopOf="@+id/btnProceed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.243"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRePassword"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextFields" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>